Closed
Bug 1887435
Opened 8 months ago
Closed 7 months ago
pointerup event isPrimary always true for touch
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
RESOLVED
FIXED
126 Branch
Tracking | Status | |
---|---|---|
firefox126 | --- | fixed |
People
(Reporter: sandbox+mozilla, Assigned: edgar)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
Firefox for Android
Steps to reproduce:
Open the attached page, which writes out the pointer event, pointerId, isPrimary to the page.
Touch the page with increasing and then decreasing number of fingers.
(The behavior is the same on Windows and Android.)
Actual results:
pointerdown 0 true
pointerdown 1 false
pointerdown 2 false
pointerup 2 true
pointerup 1 true
pointerup 0 true
Expected results:
pointerdown 0 true
pointerdown 1 false
pointerdown 2 false
pointerup 2 false
pointerup 1 false
pointerup 0 true
Reporter | ||
Updated•8 months ago
|
Component: Untriaged → DOM: Events
OS: Unspecified → Windows
Product: Firefox → Core
Hardware: Unspecified → x86_64
Reporter | ||
Updated•8 months ago
|
Component: DOM: Events → DOM: UI Events & Focus Handling
Assignee | ||
Comment 2•7 months ago
|
||
I think it is a bug around https://searchfox.org/mozilla-central/rev/6b39381c0056c0dff0820fffebedf9980adc8883/dom/events/PointerEventHandler.cpp#684 where the touchend
event might only contains one touch
.
Assignee | ||
Comment 3•7 months ago
|
||
Updated•7 months ago
|
Attachment #9395756 -
Attachment description: Bug 1887435 - Ensure the `isPrimary` property of `PointerEvent` is correctly set for touch input; → Bug 1887435 - Ensure the `isPrimary` property of `PointerEvent` is correctly set for touch input; r?smaug
Pushed by echen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/0591015c67d4
Ensure the `isPrimary` property of `PointerEvent` is correctly set for touch input; r=smaug
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/45672 for changes under testing/web-platform/tests
Comment 6•7 months ago
|
||
bugherder |
Status: UNCONFIRMED → RESOLVED
Closed: 7 months ago
status-firefox126:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 126 Branch
Upstream PR merged by moz-wptsync-bot
You need to log in
before you can comment on or make changes to this bug.
Description
•