Bug 1887435 - Ensure the `isPrimary` property of `PointerEvent` is correctly set for touch input; r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D207017