dom/events/PointerEventHandler.h
@@ -50,13 +50,16 @@ class PointerInfo final {
   uint16_t mPointerType;
   bool mActiveState;
   bool mPrimaryState;
+  bool mFromTouchEvent;
   bool mPreventMouseEventByContent;
   WeakPtr<dom::Document> mActiveDocument;
   explicit PointerInfo(bool aActiveState, uint16_t aPointerType,
-                       bool aPrimaryState, dom::Document* aActiveDocument)
+                       bool aPrimaryState, bool aFromTouchEvent,
+                       dom::Document* aActiveDocument)
       : mPointerType(aPointerType),
         mActiveState(aActiveState),
         mPrimaryState(aPrimaryState),
+        mFromTouchEvent(aFromTouchEvent),
         mPreventMouseEventByContent(false),
         mActiveDocument(aActiveDocument) {}
 };
@@ -208,8 +211,7 @@ class PointerEventHandler final {
 
   static void InitPointerEventFromTouch(WidgetPointerEvent& aPointerEvent,
                                         const WidgetTouchEvent& aTouchEvent,
-                                        const mozilla::dom::Touch& aTouch,
-                                        bool aIsPrimary);
+                                        const mozilla::dom::Touch& aTouch);
 
   static bool ShouldGeneratePointerEventFromMouse(WidgetGUIEvent* aEvent) {
     return aEvent->mMessage == eMouseDown || aEvent->mMessage == eMouseUp ||
@@ -249,6 +251,10 @@ class PointerEventHandler final {
   // GetPointerPrimaryState returns state of attribute isPrimary for pointer
   // event with pointerId
   static bool GetPointerPrimaryState(uint32_t aPointerId);
+
+  // HasActiveTouchPointer returns true if there is active pointer event that is
+  // generated from touch event.
+  static bool HasActiveTouchPointer();
 
   MOZ_CAN_RUN_SCRIPT
   static void DispatchGotOrLostPointerCaptureEvent(
